Initial commit: safeAmorxV2 con mejoras comerciales
- Nivel 1 y 2 aplicados (tipografía, colores, header)
- Nueva estructura home: hero + transición + mapa cuadrado
- Páginas internas mejoradas con header y footer
- 10 imágenes de fiesta generadas
- Documentos de recomendaciones en carpeta prompt

--- a/collabs.html
+++ b/collabs.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COLLABS</title>
+    <title>Collabs - SAFE AMORX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
-    <link href="https://fonts.googleapis.com/css2?family=BBH+Bogle:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="content-page" data-category="collabs">
-    <main class="page-content">
-        <!-- El contenido se cargará dinámicamente aquí -->
-        <a href="index.html" class="back-link">
-            <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="back-link-logo">
+    <!-- Header de navegación fijo -->
+    <header class="main-header scrolled">
+        <a href="index.html">
+            <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="header-logo">
         </a>
-    </main>
+        <nav class="main-nav">
+            <a href="collabs.html">Collabs</a>
+            <a href="blog.html">Blog</a>
+            <a href="about.html">About</a>
+            <a href="training.html">Training</a>
+            <a href="booking.html" class="cta-button">Booking</a>
+        </nav>
+    </header>
+
+    <!-- Contenido principal -->
+    <div class="content-wrapper">
+        <main class="page-content">
+            <section class="content-section">
+                <!-- El contenido se cargará dinámicamente aquí -->
+            </section>
+        </main>
+    </div>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <p>© 2026 Safe Amorx | Diseñado por <a href="https://meowrhino.studio" target="_blank">meowrhino.studio</a></p>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
