Ajustes finales v2: mapa visible, bloques glass, menú reordenado, verde principal
- Mapa: texto y líneas en blanco puro, visible correctamente
- Bloques glass: content-section completa es un bloque glass (no elementos individuales)
- Imágenes: más pequeñas (40%) y separadas (margin 2rem)
- Menú: orden ABOUT > COLLABS > TRAINING > BLOG > BOOKING (verde)
- Verde como color principal (accent y CTA)
- HOME en lugar de logo, con sección activa subrayada
- Footer: 'Volver a la Home' sin flecha
- Responsive mejorado

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body class="home-page">
     <!-- Header de navegación fijo -->
     <header class="main-header">
-        <a href="index.html">
-            <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="header-logo">
-        </a>
+        <a href="index.html" class="header-home-link active">HOME</a>
         <nav class="main-nav">
-            <a href="collabs.html">Collabs</a>
-            <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
+            <a href="collabs.html">Collabs</a>
             <a href="training.html">Training</a>
+            <a href="blog.html">Blog</a>
             <a href="booking.html" class="cta-button">Booking</a>
         </nav>
     </header>
