--- a/about.html
+++ b/about.html
@@ -12,14 +12,12 @@
 <body class="content-page" data-category="about">
     <!-- Header de navegación fijo -->
     <header class="main-header scrolled">
-        <a href="index.html">
-            <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="header-logo">
-        </a>
+        <a href="index.html" class="header-home-link">HOME</a>
         <nav class="main-nav">
+            <a href="about.html" class="active">About</a>
             <a href="collabs.html">Collabs</a>
-            <a href="blog.html">Blog</a>
-            <a href="about.html">About</a>
             <a href="training.html">Training</a>
+            <a href="blog.html">Blog</a>
             <a href="booking.html" class="cta-button">Booking</a>
         </nav>
     </header>
@@ -35,7 +33,7 @@
 
     <!-- Footer -->
     <footer class="main-footer">
-        <a href="index.html">← Volver a la Home</a>
+        <a href="index.html">Volver a la Home</a>
     </footer>
 
     <script src="js/main.js"></script>
