--- a/collabs.html
+++ b/collabs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>collabs.html - SAFE AMORX</title>
+    <title>Collabs - SAFE AMORX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="assets/images/favicon.png" type="image/png">
@@ -12,14 +12,12 @@
 <body class="content-page" data-category="collabs">
     <!-- Header de navegación fijo -->
     <header class="main-header scrolled">
-        <a href="index.html">
-            <img src="assets/images/LOGO.webp" alt="Safe Amorx" class="header-logo">
-        </a>
+        <a href="index.html" class="header-home-link">HOME</a>
         <nav class="main-nav">
-            <a href="collabs.html">Collabs</a>
-            <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
+            <a href="collabs.html" class="active">Collabs</a>
             <a href="training.html">Training</a>
+            <a href="blog.html">Blog</a>
             <a href="booking.html" class="cta-button">Booking</a>
         </nav>
     </header>
@@ -35,7 +33,7 @@
 
     <!-- Footer -->
     <footer class="main-footer">
-        <a href="index.html">← Volver a la Home</a>
+        <a href="index.html">Volver a la Home</a>
     </footer>
 
     <script src="js/main.js"></script>
